<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/editTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="@string/text_editTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_editText"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/editTextView"
        app:layout_constraintRight_toRightOf="@id/editTextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/text_click_me"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/editText"
        app:layout_constraintRight_toRightOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toTopOf="@id/mainTextView"
        app:layout_constraintTop_toBottomOf="@id/dateTextView">

        <TextView
            android:id="@+id/spinnerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/labelComboBox"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:entries="@array/spinnerStorage"
            android:background="@drawable/boxed"
            android:spinnerMode="dropdown"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerTextView" />

        <ImageView
            android:id="@+id/imageChoiceSpinner"
            android:layout_width="450dp"
            android:layout_height="250dp"
            android:layout_below="@id/spinner"
            android:layout_marginTop="20dp"
            android:maxWidth="500dp"
            android:maxHeight="350dp"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="@id/spinner"
            app:layout_constraintRight_toRightOf="@id/spinner"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            android:layout_marginBottom="16dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/just_milk"
        android:paddingBottom="16dp"
        android:text="@string/text_name_lab"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>